// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItemElement /> isActive should render component 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  background: #0556B2;
  color: #fff;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0 .svg,
.c0 .svg .fill {
  fill: #fff;
}

.c0 .svg .stroke {
  stroke: #fff;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> isActive should render component not outline 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  background: #0552A9;
  color: #fff;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0 .svg,
.c0 .svg .fill {
  fill: #fff;
}

.c0 .svg .stroke {
  stroke: #fff;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> isActive should render component not outline with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  font-weight: 600;
  background: #8eb9e9;
  color: #033c7c;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0 .svg,
.c0 .svg .fill {
  fill: #033c7c;
}

.c0 .svg .stroke {
  stroke: #033c7c;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> isActive should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  font-weight: 600;
  background: #a7c9ee;
  color: #033c7c;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0 .svg,
.c0 .svg .fill {
  fill: #033c7c;
}

.c0 .svg .stroke {
  stroke: #033c7c;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> should be disabled 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  opacity: 0.7;
  pointer-events: none;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0:hover {
  background: #0665d0;
  color: #fff;
}

.c0:hover .svg,
.c0:hover .svg .fill {
  fill: #fff;
}

.c0:hover .svg .stroke {
  stroke: #fff;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> should not have hover 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0:hover {
  background: #0665d0;
  color: #fff;
}

.c0:hover .svg,
.c0:hover .svg .fill {
  fill: #fff;
}

.c0:hover .svg .stroke {
  stroke: #fff;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> should render component not outline 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0:hover {
  background: #055BBB;
  color: #fff;
}

.c0:hover .svg,
.c0:hover .svg .fill {
  fill: #fff;
}

.c0:hover .svg .stroke {
  stroke: #fff;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> should render component not outline with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  font-weight: 600;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0:hover {
  background: #b9d3f1;
  color: #033c7c;
}

.c0:hover .svg,
.c0:hover .svg .fill {
  fill: #033c7c;
}

.c0:hover .svg .stroke {
  stroke: #033c7c;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<DropdownItemElement /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  font-weight: 600;
}

.c0 .svg,
.c0 .svg .fill,
.c0 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c0:hover {
  background: #cde0f5;
  color: #033c7c;
}

.c0:hover .svg,
.c0:hover .svg .fill {
  fill: #033c7c;
}

.c0:hover .svg .stroke {
  stroke: #033c7c;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;
